Fixed authentication, need to resolve auth not working in swagger UI (auth header is empty for some reason)
